<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SpoonacularRecipeActivity">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:id="@+id/headerView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/title"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:fontFamily="@font/fuzzybubblesbold"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/search_your_recipes"-->
<!--                    android:textColor="@color/colorPrimaryLight"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:drawableLeft="@drawable/ic_search_primary_light"-->
<!--                    android:drawableStart="@drawable/ic_search_primary_light"-->
<!--                    android:drawablePadding="10dp"/>-->
            </androidx.cardview.widget.CardView>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardSearch"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/pumpkinloader" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerHeader"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/cardSearch"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:foregroundGravity="center"
                android:overScrollMode="never" />

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/fuzzybubblesbold"
                android:text="@string/recipes"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleCategory"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <include android:id="@+id/shimmerRecipe"
                layout="@layout/item_recycler_recipe_shimmer" />

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/ournames"
                android:fontFamily="@font/fuzzybubblesbold"
                android:background="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>