<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/backbtnonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="back"
        android:src="@drawable/back_ic"
        app:layout_constraintBottom_toTopOf="@+id/groupimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.040"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lineanimation"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/groupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupimage"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/line" />

    <ImageView
        android:id="@+id/groupimage"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src="@drawable/g26"
        app:layout_constraintBottom_toTopOf="@+id/groupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/fuzzybubblesbold"
        android:text="Group 26 Members"
        android:textColor="@color/darkgrey"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/xinyilinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/xinyilinear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupText">

        <androidx.cardview.widget.CardView
            android:id="@+id/xinyi"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/xinyi"></ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fuzzybubblesbold"
            android:padding="17dp"
            android:text="Xinyi Feng"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/xinyi"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xinyigitlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:text="@string/Xinyigithub"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:paddingTop="20dp"
                android:text="feng.xinyi@northeastern.edu"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Jinglinear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/xinyilinear">

        <androidx.cardview.widget.CardView
            android:id="@+id/jing"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/jing"></ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fuzzybubblesbold"
            android:padding="17dp"
            android:text="Jing Ye"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jing"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jing_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:text="@string/JingGithubLink"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:paddingTop="20dp"
                android:text="ye.jing2@northeastern.edu"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/jasonLinear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Jinglinear">

        <androidx.cardview.widget.CardView
            android:id="@+id/jason"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/jason"></ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fuzzybubblesbold"
            android:padding="17dp"
            android:text="Haozhe \nZhang"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jason"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jasonGitLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:text="@string/JasonGithub"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:paddingTop="20dp"
                android:text="zhang.haozhe1@northeastern.edu"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Johndoe2linear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jasonLinear">

        <androidx.cardview.widget.CardView
            android:id="@+id/johndoe2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_image_category"></ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fuzzybubblesbold"
            android:padding="17dp"
            android:text="John Doe 2"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/johndoe2"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/johndoe2_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:text="John Doe2's github link"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubblesregular"
                android:paddingTop="20dp"
                android:text="John Doe2's email"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>